--- a/manifest.json
+++ b/manifest.json
@@ -20,9 +20,9 @@
       }
     ],
     "icons": {
-      "16": "ai.jpg",
-      "48": "ai.jpg",
-      "128": "ai.jpg"
+      "16": "icon.png",
+      "48": "icon.png",
+      "128": "icon.png"
     },
     "action": {
       "default_popup": "popup.html",
